# glassbox-audit

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: external-causal-or-bench.yaml  qwen2.5-1.5b-expanded-audit.yaml  qwen2.5-3b-replication.yaml  sae-stability.yaml  toy.yaml
configs/replication/: gemma-2-2b-it.yaml  llama-3.2-1b-instruct.yaml
data/: README.md
data/fixtures/: external_refusal_fixture.jsonl  refusal_pairs_tiny.jsonl
docs/: artifact-manifest.md  claims-and-limitations.md  methodology.md  paper.md  preregistration_hardening.yaml  preregistration_hardening_amendment_1.yaml  release-report.md  reproducibility.md  results.md  reviewer-qa.md
docs/figures/: hardening_chart_contract.md
docs/tables/: artifact_hashes.md  artifact_manifest.md  component_path_phase4.md  component_path_summary.md  final_result_matrix.md  layerwise_controls.md  method_comparisons.md  result_matrix.md  sae_stability_phase4.md  sae_stability_summary.md  statistical_summary.md
paper/blackboxnlp2026/: .gitignore  README.md  main.tex  references.bib
results/capability/: wikitext2_qwen15b.json
results/component-path/: component_path_summary.json  phase4_component_path_summary.json  (+2 more)
scripts/: generate_hardening_figures.py  generate_readme_figures.py  generate_report.sh  release_check.sh  reproduce_cleanroom.sh  reproduce_external.sh  reproduce_hardening.sh  smoke.sh
tests/: test_capability.py  test_data.py  test_interventions.py  test_modeling.py  test_phase5.py  test_pipeline.py  test_sae.py  test_stats.py
(+76 files in other folders)
