[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "glassbox-audit"
version = "0.1.0"
description = "Held-out causal activation audit of refusal behavior in Qwen instruction models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Glassbox contributors" }]
keywords = ["mechanistic-interpretability", "sparse-autoencoders", "qwen", "ai-safety", "activation-patching"]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "torch>=2.2",
    "transformers>=4.45",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9"]
ui = ["pandas>=2.1", "streamlit>=1.40"]
paper = ["matplotlib>=3.8"]
data = ["datasets>=2.18"]
accelerate = ["accelerate>=1.0", "bitsandbytes>=0.43"]

[project.scripts]
glassbox = "glassbox_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["glassbox_audit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
